--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expanded-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand" href="https://boisecodeworks.com/">
+        <i class="mdi mdi-hand-heart"></i>
+        Make An Impact
+      </a>
 
+    </div>
+  </nav>
 </body>
 
 </html>
