--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         Make An Impact
       </a>
 
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </div>
   </nav>
 </body>
